fixed spacing issues with blog links on home page

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -52,7 +52,7 @@ p {
     font-family: $poppins;    
     font-weight: normal;
     font-size: 1.1em;
-    max-width: 33ch;
+    max-width: 29ch;
 }
 
 .moreBtn {
@@ -93,6 +93,14 @@ p {
     }
 
 }
+
+@media screen and (max-width: 1100px) {
+    .blog_title {
+        max-width: 100%;
+        padding: 0 50px;
+    }
+}
+
 
 .blog_sub {
     font-family: $poppins;
